--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ VITE_GOOGLE_CLIENT_ID =
 VITE_CLIENT_URL =
 VITE_SERVER_URL =
 VITE_CONTACT_EMAIL =
-VITE_CONTACT_PHONE
+VITE_CONTACT_PHONE =
+VITE_RAZORPAY_KEY_ID =
